--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@angular/cli": "12.0.0",
     "@angular/compiler-cli": "12.0.0",
     "@angular/language-service": "12.0.0",
+    "@commitlint/config-conventional": "^12.1.4",
     "@ng-builders/semrel": "1.4.0",
     "@nrwl/cli": "12.3.4",
     "@nrwl/cypress": "12.3.4",
@@ -63,13 +64,13 @@
     "@types/node": "14.14.33",
     "@typescript-eslint/eslint-plugin": "4.19.0",
     "@typescript-eslint/parser": "4.19.0",
-    "husky": "^4.3.8",
-    "cypress": "^6.0.1",
     "commitlint": "^12.0.1",
+    "cypress": "^6.0.1",
     "dotenv": "8.2.0",
     "eslint": "7.22.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
+    "husky": "^4.3.8",
     "jest": "26.2.2",
     "jest-preset-angular": "8.4.0",
     "lint-staged": "^10.5.4",
@@ -86,6 +87,9 @@
     }
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx,html,md,less,scss,json}": ["npm run format:write", "git add"]
+    "*.{js,jsx,ts,tsx,html,md,less,scss,json}": [
+      "npm run format:write",
+      "git add"
+    ]
   }
 }
