--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "nx": "nx",
     "start": "ng serve",
     "build": "ng build",
+    "preprelease": "node scripts/prerelease",
+    "release": "nx affected --target release",
     "test": "ng test",
     "lint": "nx workspace-lint && ng lint",
     "e2e": "ng e2e",
