feat: add publish config

--- a/libs/angular/package.json
+++ b/libs/angular/package.json
@@ -24,5 +24,8 @@
     "Roman Sedov <79601794011@ya.ru>"
   ],
   "repository": "https://github.com/TinkoffCreditSystems/micro-sentry",
-  "homepage": "https://github.com/TinkoffCreditSystems/micro-sentry"
+  "homepage": "https://github.com/TinkoffCreditSystems/micro-sentry",
+  "publishConfig": {
+    "access": "public"
+  }
 }
