--- a/libs/core/package.json
+++ b/libs/core/package.json
@@ -19,5 +19,8 @@
     "Roman Sedov <79601794011@ya.ru>"
   ],
   "repository": "https://github.com/TinkoffCreditSystems/micro-sentry",
-  "homepage": "https://github.com/TinkoffCreditSystems/micro-sentry"
+  "homepage": "https://github.com/TinkoffCreditSystems/micro-sentry",
+  "publishConfig": {
+    "access": "public"
+  }
 }
