--- a/libs/angular/package.json
+++ b/libs/angular/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@micro-sentry/angular",
-  "version": "0.0.1",
+  "version": "0.0.0-development",
   "peerDependencies": {
     "@angular/common": "^12.0.2",
     "@angular/core": "^12.0.2"
   },
   "dependencies": {
     "tslib": "^2.1.0",
-    "@micro-sentry/browser": "^0.0.1"
+    "@micro-sentry/browser": "^2.0.1"
   },
   "license": "Apache-2.0",
   "keywords": [
