chore: fix pipelines

--- a/package.json
+++ b/package.json
@@ -3,16 +3,15 @@
   "version": "0.0.0",
   "license": "Apache 2.0",
   "scripts": {
-    "ng": "nx",
-    "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main",
+    "ng": "ng",
     "nx": "nx",
-    "start": "ng serve",
-    "build": "ng build",
+    "start": "nx serve",
+    "build": "nx build",
     "prerelease": "node scripts/prerelease",
     "release": "nx affected --target release --with-deps",
-    "test": "ng test",
-    "lint": "nx workspace-lint && ng lint",
-    "e2e": "ng e2e",
+    "test": "nx test",
+    "lint": "nx workspace-lint && nx lint",
+    "e2e": "nx e2e",
     "affected:apps": "nx affected:apps",
     "affected:libs": "nx affected:libs",
     "affected:build": "nx affected:build",
