chore: fix pipelines

--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
     "ng": "ng",
     "nx": "nx",
     "start": "nx serve",
-    "build": "nx build",
+    "build": "nx affected --target build --prod --with-deps",
     "prerelease": "node scripts/prerelease",
     "release": "nx affected --target release --with-deps",
-    "test": "nx test",
-    "lint": "nx workspace-lint && nx lint",
+    "test": "nx affected --target test",
+    "lint": "nx workspace-lint && nx affected --target lint",
     "e2e": "nx e2e",
     "affected:apps": "nx affected:apps",
     "affected:libs": "nx affected:libs",
