--- a/libs/browser/package.json
+++ b/libs/browser/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0-development",
   "dependencies": {
     "tslib": "^2.1.0",
-    "@micro-sentry/core": "^2.0.1"
+    "@micro-sentry/core": "0.0.0-development"
   },
   "license": "Apache-2.0",
   "keywords": [
