--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "nx serve",
     "build": "nx affected --target build --prod --with-deps",
     "prerelease": "node scripts/prerelease",
-    "release": "nx affected --target release --with-deps",
+    "release": "nx run-many --target release --all",
     "test": "nx affected --target test",
     "lint": "nx workspace-lint && nx affected --target lint",
     "e2e": "nx e2e",
@@ -52,7 +52,7 @@
     "@angular/compiler-cli": "12.0.0",
     "@angular/language-service": "12.0.0",
     "@commitlint/config-conventional": "^12.1.4",
-    "@ng-builders/semrel": "1.4.0",
+    "@ng-builders/semrel": "1.5.0",
     "@nrwl/cli": "12.3.4",
     "@nrwl/cypress": "12.3.4",
     "@nrwl/eslint-plugin-nx": "12.3.4",
