--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "micro-sentry",
-  "version": "0.0.0",
+  "version": "0.0.0-development",
   "license": "Apache 2.0",
   "scripts": {
     "ng": "ng",
@@ -24,62 +24,60 @@
     "format:write": "nx format:write",
     "format:check": "nx format:check",
     "update": "nx migrate latest",
-    "workspace-generator": "nx workspace-generator",
+    "workspace-schematic": "nx workspace-schematic",
     "dep-graph": "nx dep-graph",
     "help": "nx help"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "12.0.0",
-    "@angular/common": "12.0.0",
-    "@angular/compiler": "12.0.0",
-    "@angular/core": "12.0.0",
-    "@angular/forms": "12.0.0",
-    "@angular/platform-browser": "12.0.0",
-    "@angular/platform-browser-dynamic": "12.0.0",
-    "@angular/router": "12.0.0",
-    "@nrwl/angular": "12.3.4",
-    "rxjs": "~6.6.0",
+    "@angular/animations": "^10.1.0",
+    "@angular/common": "^10.1.0",
+    "@angular/compiler": "^10.1.0",
+    "@angular/core": "^10.1.0",
+    "@angular/forms": "^10.1.0",
+    "@angular/platform-browser": "^10.1.0",
+    "@angular/platform-browser-dynamic": "^10.1.0",
+    "@angular/router": "^10.1.0",
+    "@nrwl/angular": "10.4.15",
+    "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "^0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "12.0.0",
-    "@angular-eslint/eslint-plugin": "~12.0.0",
-    "@angular-eslint/eslint-plugin-template": "~12.0.0",
-    "@angular-eslint/template-parser": "~12.0.0",
-    "@angular/cli": "12.0.0",
-    "@angular/compiler-cli": "12.0.0",
-    "@angular/language-service": "12.0.0",
+    "@angular-devkit/build-angular": "~0.1001.3",
+    "@angular/cli": "~10.1.3",
+    "@angular/compiler-cli": "^10.1.0",
+    "@angular/language-service": "^10.1.0",
     "@commitlint/config-conventional": "^12.1.4",
-    "@ng-builders/semrel": "1.5.0",
-    "@nrwl/cli": "12.3.4",
-    "@nrwl/cypress": "12.3.4",
-    "@nrwl/eslint-plugin-nx": "12.3.4",
-    "@nrwl/jest": "12.3.4",
-    "@nrwl/linter": "12.3.4",
-    "@nrwl/nx-cloud": "latest",
-    "@nrwl/tao": "12.3.4",
-    "@nrwl/workspace": "12.3.4",
+    "@ng-builders/semrel": "^1.5.0",
+    "@nrwl/cli": "10.4.15",
+    "@nrwl/cypress": "10.4.15",
+    "@nrwl/eslint-plugin-nx": "10.4.15",
+    "@nrwl/jest": "10.4.15",
+    "@nrwl/nx-cloud": "10.1.10",
+    "@nrwl/tao": "10.4.15",
+    "@nrwl/workspace": "10.4.15",
     "@types/jest": "26.0.8",
-    "@types/node": "14.14.33",
-    "@typescript-eslint/eslint-plugin": "4.19.0",
-    "@typescript-eslint/parser": "4.19.0",
+    "@types/node": "~8.9.4",
+    "@typescript-eslint/eslint-plugin": "4.3.0",
+    "@typescript-eslint/parser": "4.3.0",
+    "codelyzer": "~5.0.1",
     "commitlint": "^12.0.1",
-    "cypress": "^6.0.1",
-    "dotenv": "8.2.0",
-    "eslint": "7.22.0",
-    "eslint-config-prettier": "8.1.0",
+    "cypress": "^5.5.0",
+    "dotenv": "6.2.0",
+    "eslint": "7.10.0",
+    "eslint-config-prettier": "6.0.0",
     "eslint-plugin-cypress": "^2.10.3",
     "husky": "^4.3.8",
     "jest": "26.2.2",
-    "jest-preset-angular": "8.4.0",
+    "jest-preset-angular": "8.3.1",
     "lint-staged": "^10.5.4",
-    "ng-packagr": "^12.0.0",
-    "prettier": "2.2.1",
-    "ts-jest": "26.5.5",
-    "ts-node": "~9.1.1",
-    "typescript": "~4.2.4"
+    "ng-packagr": "^10.1.0",
+    "prettier": "2.1.2",
+    "ts-jest": "26.4.0",
+    "ts-node": "~7.0.0",
+    "tslint": "~6.0.0",
+    "typescript": "~4.0.3"
   },
   "husky": {
     "hooks": {
