--- a/libs/angular/package.json
+++ b/libs/angular/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0-development",
   "peerDependencies": {
     "@angular/common": "^10.0.0",
-    "@angular/core": "^10.0.0"
+    "@angular/core": "^10.0.0",
+    "@ng-web-apis/common": "^1.12.0"
   },
   "dependencies": {
     "tslib": "^2.0.0",
