--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@angular/language-service": "^10.1.0",
     "@commitlint/config-conventional": "^12.1.4",
     "@ng-builders/semrel": "^1.5.0",
+    "@ng-web-apis/common": "^1.12.0",
     "@nrwl/cli": "10.4.15",
     "@nrwl/cypress": "10.4.15",
     "@nrwl/eslint-plugin-nx": "10.4.15",
