--- a/package.json
+++ b/package.json
@@ -24,70 +24,73 @@
     "format:write": "nx format:write",
     "format:check": "nx format:check",
     "update": "nx migrate latest",
-    "workspace-schematic": "nx workspace-schematic",
     "dep-graph": "nx dep-graph",
     "help": "nx help",
     "dev:ssr": "ng run docs:serve-ssr",
     "serve:ssr": "node dist/docs/server/main.js",
     "build:ssr": "ng build --prod && ng run docs:server:production",
-    "prerender": "ng run docs:prerender"
+    "prerender": "ng run docs:prerender",
+    "workspace-generator": "nx workspace-generator"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^10.1.0",
-    "@angular/common": "^10.1.0",
-    "@angular/compiler": "^10.1.0",
-    "@angular/core": "^10.1.0",
-    "@angular/forms": "^10.1.0",
-    "@angular/platform-browser": "^10.1.0",
-    "@angular/platform-browser-dynamic": "^10.1.0",
-    "@angular/platform-server": "^10.1.0",
-    "@angular/router": "^10.1.0",
-    "@nguniversal/express-engine": "^10.1.0",
+    "@angular/animations": "11.2.14",
+    "@angular/common": "11.2.14",
+    "@angular/compiler": "11.2.14",
+    "@angular/core": "11.2.14",
+    "@angular/forms": "11.2.14",
+    "@angular/platform-browser": "11.2.14",
+    "@angular/platform-browser-dynamic": "11.2.14",
+    "@angular/platform-server": "11.2.14",
+    "@angular/router": "11.2.14",
+    "@nguniversal/express-engine": "^11.2.1",
     "@ngx-ssr/platform": "^1.1.1",
-    "@nrwl/angular": "10.4.15",
+    "@nrwl/angular": "11.6.3",
     "express": "^4.15.2",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "^0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1001.3",
-    "@angular/cli": "~10.1.3",
-    "@angular/compiler-cli": "^10.1.0",
-    "@angular/language-service": "^10.1.0",
+    "@angular-devkit/build-angular": "0.1102.19",
+    "@angular-eslint/eslint-plugin": "~1.0.0",
+    "@angular-eslint/eslint-plugin-template": "~1.0.0",
+    "@angular-eslint/template-parser": "~1.0.0",
+    "@angular/cli": "11.2.19",
+    "@angular/compiler-cli": "11.2.14",
+    "@angular/language-service": "11.2.14",
     "@commitlint/config-conventional": "^12.1.4",
     "@ng-builders/semrel": "^1.5.0",
     "@ng-web-apis/common": "^1.12.0",
-    "@nguniversal/builders": "^10.1.0",
-    "@nrwl/cli": "10.4.15",
-    "@nrwl/cypress": "10.4.15",
-    "@nrwl/eslint-plugin-nx": "10.4.15",
-    "@nrwl/jest": "10.4.15",
-    "@nrwl/nx-cloud": "10.1.10",
-    "@nrwl/tao": "10.4.15",
-    "@nrwl/workspace": "10.4.15",
+    "@nguniversal/builders": "^11.2.1",
+    "@nrwl/cli": "11.6.3",
+    "@nrwl/cypress": "11.6.3",
+    "@nrwl/eslint-plugin-nx": "11.6.3",
+    "@nrwl/jest": "11.6.3",
+    "@nrwl/nx-cloud": "11.2.0",
+    "@nrwl/tao": "11.6.3",
+    "@nrwl/workspace": "11.6.3",
     "@types/express": "^4.17.0",
     "@types/jest": "26.0.8",
-    "@types/node": "~8.9.4",
+    "@types/node": "14.14.33",
     "@typescript-eslint/eslint-plugin": "4.3.0",
     "@typescript-eslint/parser": "4.3.0",
-    "codelyzer": "~5.0.1",
+    "codelyzer": "^6.0.0",
     "commitlint": "^12.0.1",
     "cypress": "^5.5.0",
-    "dotenv": "6.2.0",
+    "dotenv": "8.2.0",
     "eslint": "7.10.0",
     "eslint-config-prettier": "6.0.0",
     "eslint-plugin-cypress": "^2.10.3",
     "husky": "^4.3.8",
     "jest": "26.2.2",
-    "jest-preset-angular": "8.3.1",
+    "jest-preset-angular": "8.3.2",
     "lint-staged": "^10.5.4",
-    "ng-packagr": "^10.1.0",
-    "prettier": "2.1.2",
+    "ng-packagr": "11.2.4",
+    "prettier": "2.2.1",
     "ts-jest": "26.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~6.0.0",
+    "ts-node": "9.1.1",
+    "tslint": "6.1.3",
     "typescript": "~4.0.3"
   },
   "husky": {
