--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "ng": "ng",
     "nx": "nx",
     "start": "nx serve",
-    "build": "nx affected --target build --prod --with-deps",
+    "build": "nx affected --target build --configuration production --with-deps",
     "prerelease": "node scripts/prerelease",
     "release": "nx run-many --target release --all",
     "test": "nx affected --target test",
@@ -28,70 +28,69 @@
     "help": "nx help",
     "dev:ssr": "ng run docs:serve-ssr",
     "serve:ssr": "node dist/docs/server/main.js",
-    "build:ssr": "ng build --prod && ng run docs:server:production",
+    "build:ssr": "ng build --configuration production && ng run docs:server:production",
     "prerender": "ng run docs:prerender",
     "workspace-generator": "nx workspace-generator"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "11.2.14",
-    "@angular/common": "11.2.14",
-    "@angular/compiler": "11.2.14",
-    "@angular/core": "11.2.14",
-    "@angular/forms": "11.2.14",
-    "@angular/platform-browser": "11.2.14",
-    "@angular/platform-browser-dynamic": "11.2.14",
-    "@angular/platform-server": "11.2.14",
-    "@angular/router": "11.2.14",
-    "@nguniversal/express-engine": "^11.2.1",
+    "@angular/animations": "12.2.16",
+    "@angular/common": "12.2.16",
+    "@angular/compiler": "12.2.16",
+    "@angular/core": "12.2.16",
+    "@angular/forms": "12.2.16",
+    "@angular/platform-browser": "12.2.16",
+    "@angular/platform-browser-dynamic": "12.2.16",
+    "@angular/platform-server": "12.2.16",
+    "@angular/router": "12.2.16",
+    "@nguniversal/express-engine": "^12.1.3",
     "@ngx-ssr/platform": "^1.1.1",
-    "@nrwl/angular": "11.6.3",
+    "@nrwl/angular": "12.10.1",
     "express": "^4.15.2",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
-    "zone.js": "^0.10.2"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.1102.19",
-    "@angular-eslint/eslint-plugin": "~1.0.0",
-    "@angular-eslint/eslint-plugin-template": "~1.0.0",
-    "@angular-eslint/template-parser": "~1.0.0",
-    "@angular/cli": "11.2.19",
-    "@angular/compiler-cli": "11.2.14",
-    "@angular/language-service": "11.2.14",
+    "@angular-devkit/build-angular": "12.2.17",
+    "@angular-eslint/eslint-plugin": "12.3.1",
+    "@angular-eslint/eslint-plugin-template": "12.3.1",
+    "@angular-eslint/template-parser": "12.3.1",
+    "@angular/cli": "12.2.17",
+    "@angular/compiler-cli": "12.2.16",
+    "@angular/language-service": "12.2.16",
     "@commitlint/config-conventional": "^12.1.4",
     "@ng-builders/semrel": "^1.5.0",
     "@ng-web-apis/common": "^1.12.0",
-    "@nguniversal/builders": "^11.2.1",
-    "@nrwl/cli": "11.6.3",
-    "@nrwl/cypress": "11.6.3",
-    "@nrwl/eslint-plugin-nx": "11.6.3",
-    "@nrwl/jest": "11.6.3",
-    "@nrwl/nx-cloud": "11.2.0",
-    "@nrwl/tao": "11.6.3",
-    "@nrwl/workspace": "11.6.3",
+    "@nguniversal/builders": "^12.1.3",
+    "@nrwl/cli": "12.10.1",
+    "@nrwl/cypress": "12.10.1",
+    "@nrwl/eslint-plugin-nx": "12.10.1",
+    "@nrwl/jest": "12.10.1",
+    "@nrwl/nx-cloud": "12.5.4",
+    "@nrwl/workspace": "12.10.1",
     "@types/express": "^4.17.0",
-    "@types/jest": "26.0.8",
+    "@types/jest": "27.0.2",
     "@types/node": "14.14.33",
     "@typescript-eslint/eslint-plugin": "4.3.0",
     "@typescript-eslint/parser": "4.3.0",
     "codelyzer": "^6.0.0",
     "commitlint": "^12.0.1",
     "cypress": "^5.5.0",
-    "dotenv": "8.2.0",
+    "dotenv": "10.0.0",
     "eslint": "7.10.0",
     "eslint-config-prettier": "6.0.0",
     "eslint-plugin-cypress": "^2.10.3",
     "husky": "^4.3.8",
-    "jest": "26.2.2",
-    "jest-preset-angular": "8.3.2",
+    "jest": "27.2.3",
+    "jest-preset-angular": "10.0.1",
     "lint-staged": "^10.5.4",
-    "ng-packagr": "11.2.4",
-    "prettier": "2.2.1",
-    "ts-jest": "26.4.0",
+    "ng-packagr": "12.2.7",
+    "prettier": "2.6.2",
+    "ts-jest": "27.0.5",
     "ts-node": "9.1.1",
     "tslint": "6.1.3",
-    "typescript": "~4.0.3"
+    "typescript": "4.3.5"
   },
   "husky": {
     "hooks": {
