--- a/angular.json
+++ b/angular.json
@@ -66,7 +66,8 @@
             "parallel": false
           }
         }
-      }
+      },
+      "tags": []
     },
     "browser": {
       "projectType": "library",
@@ -133,7 +134,8 @@
             "parallel": false
           }
         }
-      }
+      },
+      "tags": []
     },
     "core": {
       "projectType": "library",
@@ -200,7 +202,8 @@
             "parallel": false
           }
         }
-      }
+      },
+      "tags": []
     },
     "docs": {
       "projectType": "application",
@@ -342,7 +345,8 @@
             "production": {}
           }
         }
-      }
+      },
+      "tags": []
     }
   }
 }
