--- a/package.json
+++ b/package.json
@@ -34,63 +34,68 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "12.2.16",
-    "@angular/common": "12.2.16",
-    "@angular/compiler": "12.2.16",
-    "@angular/core": "12.2.16",
-    "@angular/forms": "12.2.16",
-    "@angular/platform-browser": "12.2.16",
-    "@angular/platform-browser-dynamic": "12.2.16",
-    "@angular/platform-server": "12.2.16",
-    "@angular/router": "12.2.16",
-    "@nguniversal/express-engine": "^12.1.3",
+    "@angular/animations": "13.3.11",
+    "@angular/common": "13.3.11",
+    "@angular/compiler": "13.3.11",
+    "@angular/core": "13.3.11",
+    "@angular/forms": "13.3.11",
+    "@angular/platform-browser": "13.3.11",
+    "@angular/platform-browser-dynamic": "13.3.11",
+    "@angular/platform-server": "13.3.11",
+    "@angular/router": "13.3.11",
+    "@nguniversal/express-engine": "^13.1.1",
     "@ngx-ssr/platform": "^1.1.1",
-    "@nrwl/angular": "12.10.1",
+    "@nrwl/angular": "13.10.5",
     "express": "^4.15.2",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "0.11.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "12.2.17",
-    "@angular-eslint/eslint-plugin": "12.3.1",
-    "@angular-eslint/eslint-plugin-template": "12.3.1",
-    "@angular-eslint/template-parser": "12.3.1",
-    "@angular/cli": "12.2.17",
-    "@angular/compiler-cli": "12.2.16",
-    "@angular/language-service": "12.2.16",
+    "@angular-devkit/build-angular": "13.3.7",
+    "@angular-eslint/eslint-plugin": "13.2.1",
+    "@angular-eslint/eslint-plugin-template": "13.2.1",
+    "@angular-eslint/template-parser": "13.2.1",
+    "@angular/cli": "13.3.7",
+    "@angular/compiler-cli": "13.3.11",
+    "@angular/language-service": "13.3.11",
     "@commitlint/config-conventional": "^12.1.4",
     "@ng-builders/semrel": "^1.5.0",
     "@ng-web-apis/common": "^1.12.0",
-    "@nguniversal/builders": "^12.1.3",
-    "@nrwl/cli": "12.10.1",
-    "@nrwl/cypress": "12.10.1",
-    "@nrwl/eslint-plugin-nx": "12.10.1",
-    "@nrwl/jest": "12.10.1",
-    "@nrwl/nx-cloud": "12.5.4",
-    "@nrwl/workspace": "12.10.1",
+    "@nguniversal/builders": "^13.1.1",
+    "@nrwl/cli": "13.10.5",
+    "@nrwl/cypress": "13.10.5",
+    "@nrwl/eslint-plugin-nx": "13.10.5",
+    "@nrwl/jest": "13.10.5",
+    "@nrwl/nx-cloud": "13.3.1",
+    "@nrwl/workspace": "13.10.5",
     "@types/express": "^4.17.0",
     "@types/jest": "27.0.2",
     "@types/node": "14.14.33",
-    "@typescript-eslint/eslint-plugin": "4.3.0",
-    "@typescript-eslint/parser": "4.3.0",
+    "@typescript-eslint/eslint-plugin": "4.33.0",
+    "@typescript-eslint/parser": "4.33.0",
     "codelyzer": "^6.0.0",
     "commitlint": "^12.0.1",
     "cypress": "^5.5.0",
     "dotenv": "10.0.0",
-    "eslint": "7.10.0",
-    "eslint-config-prettier": "6.0.0",
-    "eslint-plugin-cypress": "^2.10.3",
+    "eslint": "7.32.0",
+    "eslint-config-prettier": "6.15.0",
+    "eslint-plugin-cypress": "^2.12.1",
     "husky": "^4.3.8",
     "jest": "27.2.3",
-    "jest-preset-angular": "10.0.1",
+    "jest-preset-angular": "11.1.1",
     "lint-staged": "^10.5.4",
-    "ng-packagr": "12.2.7",
+    "ng-packagr": "13.3.1",
+    "nx": "13.10.5",
+    "postcss": "^8.3.9",
+    "postcss-import": "^14.0.2",
+    "postcss-preset-env": "^6.7.0",
+    "postcss-url": "^10.1.1",
     "prettier": "2.6.2",
     "ts-jest": "27.0.5",
     "ts-node": "9.1.1",
     "tslint": "6.1.3",
-    "typescript": "4.3.5"
+    "typescript": "4.6.4"
   },
   "husky": {
     "hooks": {
